# sidecar

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  MCP_CLIENT_CONFIG.md  README.md  ROADMAP.md  SECRETS_SETUP.md  SETUP_CHECKLIST.md  deploy-to-vm.sh  deploy-vm.sh  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
examples/: sidecar_client.py
src/: __init__.py  audit.py  auth.py  bws_client.py  keys.py  proxy.py  server.py
tests/: __init__.py  test_auth.py
